# ailab

./: .aider.conf.yml  .claude.json  .gitignore  .tmux.conf  AmazonQ.md  CLAUDE.md  CONVENTIONS.md  README.md  install-claude-settings.sh  main.py  pyproject.toml  test-create-private-repo-command.sh  test-manual-create-private-repo.md
aider-bedrock/: .env.example  README.md  check_aws_bedrock.py
aider-bedrock/check/: check_aws_bedrock.py  check_aws_cli.py
claude-settings/: CLAUDE.md  settings.json
claude-settings/agents/: meta-agent.md
claude-settings/commands/: clear-merged-branches.md  create-private-repo.md  issue-full.md  issue.md  pr-review-response.md
instructions/: poker-advisor.md
review-ai/: review-ai.sh
