[project]
name = "ailab"
version = "0.1.0"
description = "A workspace for experimenting with AI-assisted development tools and AWS AI services"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Junichiro Tobe"}
]
dependencies = [
    "boto3>=1.37.19",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_backend"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
